Attempts at fixing flicker

--- a/styles/spnrs.styl
+++ b/styles/spnrs.styl
@@ -31,7 +31,8 @@
         bottom bottom-margin
         overflow scroll
         -webkit-overflow-scrolling touch
-        // -webkit-transform translate3d(0,0,0)
+        -webkit-transform-style preserve-3d
+        -webkit-transform translate3d(0,0,0)
 
         input
             width 100%
@@ -105,7 +106,7 @@
             border-radius 20px
             background-position center
             background-size cover
-        
+
     .SpnrAppBottom
         position absolute
         left 0
